--- a/historia.html
+++ b/historia.html
@@ -12,6 +12,7 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
+    <!-- Cabeçalho da página -->[]
     <div class="topo">
         <img class="logo" src="./imagens/logo.svg" alt="Logo">
         <h1>História</h1>
@@ -21,7 +22,6 @@
             <a href="https://www.instagram.com/josilenedias_/" target="_blank"><img src="./imagens/instagram.svg" alt="Instagram"></a>
         </div>
     </div>
-
     <nav>
         <div class="menu-hamburguer" onclick="toggleMenu()">
             <ion-icon name="menu-outline"></ion-icon>
@@ -34,11 +34,11 @@
             <li><a href="./destinos.html" onclick="closeMenu()">Destinos</a></li>
             <li><a href="./SAC.html" onclick="closeMenu()">SAC</a></li>
             <li>
-                <!-- Botão de Modo Noturno no Menu -->
                 <a href="#" id="modo-noturno" class="modo-noturno-btn">🌙</a>
             </li>
         </ul>
     </nav>
+    <!-- Conteúdo Principal -->
     <div class="container-historia">
         <div class="historia">
             <h2>Uma Jornada Além das Fronteiras</h2>
@@ -58,33 +58,27 @@
                 alternativa, como mochileiros, e que havia uma comunidade inteira disposta a compartilhar dicas sobre
                 como economizar. Com isso, começou a traçar um plano: primeiro, uma viagem de fim de semana para uma
                 cidade próxima, onde poderia explorar novos lugares sem gastar muito.</p>
-
             <p>Ela conheceu outros viajantes e se encantou com a liberdade de estar em um lugar novo. Cada dia era uma
                 nova aventura, e ela se sentia mais viva do que nunca. Ao voltar para casa, Josilene percebeu que a
                 experiência tinha sido transformadora e que, mesmo com um orçamento apertado, era possível viajar e
                 viver momentos inesquecíveis.</p>
-
             <p>Inspirada, Josilene começou a trabalhar em bicos como freelancer, limpava o prédio de sua tia e até
                 ajudava sua outra tia nas vendas da feira de domingo. Cada centavo que conseguia economizar era um passo
                 mais perto de sua primeira grande viagem. Ela sonhava em conhecer a América do Sul, seu próprio
                 continente, rico em cultura, natureza e, principalmente, em histórias de pessoas que, como ela, haviam
                 superado desafios, e partiu em busca de novas experiências.</p>
-
             <p>Durante sua jornada, Josilene conheceu pessoas incríveis, aprendeu sobre diferentes culturas e se
                 desafiou a sair da sua zona de conforto. Ela fez trilhas em montanhas, experimentou comidas exóticas e
                 até se aventurou em festivais locais. Cada experiência era uma nova história para contar, fazendo-a
                 sentir-se viva como nunca antes.</p>
-
             <p>Mas a verdadeira mágica aconteceu quando Josilene decidiu se aventurar fora dos roteiros turísticos. Ela
                 conheceu um grupo de viajantes que se tornaram seus amigos. Juntos, exploraram trilhas escondidas,
                 cachoeiras secretas e até participaram de um evento local, onde fizeram muito networking. Josilene
                 percebeu que as melhores experiências muitas vezes não estavam nos guias de viagem, mas nas conexões que
                 fazia com as pessoas ao seu redor.</p>
-
             <p>Com o passar do tempo, Josilene percebeu que viajar não era apenas sobre conhecer novos lugares e novas
                 pessoas, mas também sobre se conhecer melhor. Ela aprendeu a valorizar as pequenas coisas, a ser grata
                 pelas experiências e a entender que a verdadeira riqueza está nas memórias que criamos.</p>
-
             <p>Com o passar dos dias, Josilene se sentiu mais confiante e decidida a continuar sua jornada. Cada novo
                 destino trazia desafios, mas também oportunidades de crescimento. Ao final de sua jornada pela América
                 do Sul, Josilene voltou para casa com o coração cheio e a mente repleta de ideias. Ela decidiu que
@@ -92,20 +86,16 @@
                 importante, ela queria ajudar outros jovens a realizarem seus sonhos de viagem, mostrando que, com
                 planejamento e determinação, é possível explorar o mundo, independentemente das limitações financeiras.
                 O mundo estava ao alcance de suas mãos.</p>
-
             <p>Josilene começou a documentar suas experiências em um blog, "JDWorld", onde compartilhava não apenas suas
                 aventuras, mas também dicas sobre como viajar com orçamento limitado, entre outras coisas.</p>
-
             <p>Através de seu blog, Josilene começou a atrair a atenção de outros jovens que, assim como ela, sonhavam
                 em explorar o mundo. Ela se tornou uma fonte de inspiração, mostrando que, com determinação e
                 criatividade, era possível transformar sonhos em realidade. A cada novo post, mais e mais pessoas se
                 juntavam a ela, compartilhando suas próprias histórias e desafios.</p>
-
             <p>Após meses de viagem, Josilene decidiu que era hora de voltar para casa. Mas, ao invés de se sentir
                 triste, estava cheia de gratidão. Sua jornada não apenas a levou a lugares incríveis, mas também a
                 ensinou sobre resiliência, amizade e a importância de seguir seus sonhos, independentemente das
                 circunstâncias.</p>
-
             <p>E assim, <strong>"JDWorld"</strong> se tornou mais do que um blog; tornou-se um movimento. Josilene não apenas realizou
                 seu sonho de viajar, mas também inspirou uma nova geração a sonhar grande e a nunca desistir, mostrando
                 que, com coragem e determinação, é possível voar alto, mesmo sem muitas condições financeiras. Todos
@@ -114,7 +104,7 @@
                 escrever sua própria história extraordinária.</p>
         </div>
     </div>
-
+    <!-- Rodapé -->
     <footer id="contato">
         <div class="rodape">
             <a href="./cadastro.html">Cadastro</a> |
