--- a/local.html
+++ b/local.html
@@ -12,6 +12,7 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
+    <!-- Cabeçalho da página -->
     <div class="topo">
         <img class="logo" src="./imagens/logo.svg" alt="Logo">
         <h1>Localização</h1>
@@ -21,7 +22,7 @@
             <a href="https://www.instagram.com/josilenedias_/" target="_blank"><img src="./imagens/instagram.svg" alt="Instagram"></a>
         </div>
     </div>
-
+    <!-- Navegação -->
     <nav>
         <div class="menu-hamburguer" onclick="toggleMenu()">
             <ion-icon name="menu-outline"></ion-icon>
@@ -39,7 +40,7 @@
             </li>
         </ul>
     </nav>
-
+    <!-- Conteúdo Principal -->                                                    
     <div class="conteiner">
         <h2>Nosso Local</h2>
         <p>Venha nos fazer uma visita:</p>
@@ -51,7 +52,7 @@
             </iframe>
         </div>
     </div>
-
+    <!-- Rodapé -->
     <footer id="contato">
         <div class="rodape">
             <a href="./cadastro.html">Cadastro</a> |
