--- a/historia.html
+++ b/historia.html
@@ -12,7 +12,7 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
-    <!-- Cabeçalho da página -->[]
+    <!-- Cabeçalho da página -->
     <div class="topo">
         <img class="logo" src="./imagens/logo.svg" alt="Logo">
         <h1>História</h1>
