--- a/destinos.html
+++ b/destinos.html
@@ -6,8 +6,8 @@
     <title>Destinos</title>
     <link rel="shortcut icon" href="./imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="preload" href="./css/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> 
-    <link rel="stylesheet" href="./css/destinos.css">
+    <link rel="preload" href="./CSS/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> 
+    <link rel="stylesheet" href="./CSS/destinos.css">
     <link rel="stylesheet" href="./CSS/dark-mode.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" defer></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
